# cascade

./: .gitignore  Cargo.toml
crates/cil/: .reloc.dump  .rsrc.dump  .text.dump  Cargo.toml
crates/cil/examples/: dump.rs
crates/cil/src/: error.rs  header.rs  image.rs  lib.rs  meta.rs  opcodes.rs  signature.rs  strings.rs  util.rs
crates/cil/src/tables/: assembly.rs  attribute.rs  field.rs  member.rs  method.rs  mod.rs  param.rs
crates/cil/tests/: HelloWorld.cs
examples/: decompile.rs
src/: error.rs  lib.rs  opcodes.rs
tests/: Conditionals.cs  Exceptions.cs  Interop.cs  Math.cs  SimpleConditionalTest.cs  Switch.cs
