[package]
name = "cil"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dump"
path = "src/bin/dump.rs"

[dependencies]
binrw = "0.15.0"
bitflags = "2.9.1"
int-enum = "1.2.0"
object = { version = "0.37.1", default-features = false, features = ["pe", "read", "std"] }

[dev-dependencies]
chroma-dbg = "0.1.1"
